finally done with list progress bars, also fixing thead text align

--- a/newsrc/code/media/com_acctexp/less/aec/joomla-pagination.less
+++ b/newsrc/code/media/com_acctexp/less/aec/joomla-pagination.less
@@ -15,10 +15,10 @@ table.adminlist {
 		}
 	}
 	thead th {
-		.text-left {
+		&.text-left {
 			text-align: left;
 		}
-		.text-right {
+		&.text-right {
 			text-align: right;
 		}
 	}
